--- a/styles/index_style.css
+++ b/styles/index_style.css
@@ -1,4 +1,3 @@
-
 /* #region NavBar*/
 .active {
     background-color: #0c0c9a;
@@ -60,8 +59,8 @@ body {
     .griddy {
         display: grid;
         grid-template-areas: 
-        'header header header'
-        'blank1 paragraph1 blank2';
+        'header header header header'
+        'blank1 paragraph1 image blank2';
         gap: 5px;
         padding: 5px;
     }
@@ -72,19 +71,28 @@ body {
     .item2 {
         /* comment */
         grid-area: blank1;
-        width: 25%;
+        width: 15vw;
     }
     .item3 {
         grid-area: paragraph1;
-        width: 50vw;
+        width: 45vw;
         text-align: center;
         position: fixed;
-        left: 25vw;
+        left: 15vw;
         top: 35vh;
+        font-size: 85%;
     }
     .item4 {
+        grid-area: image;
+        width: 45vw;
+        text-align: center;
+        position: fixed;
+        left: 55vw;
+        top: 40vh;
+    }
+    .item5 {
         grid-area: blank2;
-        width: 25%;
+        width: 15vw;
     }
 /* #endregion Body*/
 
@@ -139,7 +147,9 @@ body {
   }
 /* #endregion Footer*/
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 800px) {
+    
+    /* #region navbar bigscreen*/
     #topNavbar {
         display: inline-block;
         background-color: #1e4f7e;
@@ -161,8 +171,10 @@ body {
         margin: 3px;
         border-radius: 8px;
     }
-    
-    
+    /* #endregion navbar bigscreen*/
+
+
+    /* #region body bigscreen*/
     body {
         background-image: url('../../images/Background.jpg');
         background-size: 100vw 85vh;
@@ -171,7 +183,48 @@ body {
         background-repeat: no-repeat;
     }
     
+    .griddy {
+        display: grid;
+        grid-template-areas: 
+        'header header header header'
+        'blank1 paragraph1 image blank2';
+        gap: 5px;
+        padding: 5px;
+    }
+
+    .item1 {
+        grid-area: header;
+    }
+    .item2 {
+        /* comment */
+        grid-area: blank1;
+        width: 20vw;
+    }
+    .item3 {
+        grid-area: paragraph1;
+        width: 40vw;
+        text-align: center;
+        position: fixed;
+        left: 20vw;
+        top: 35vh;
+        font-size: 100%;
+    }
+    .item4 {
+        grid-area: image;
+        width: 40vw;
+        text-align: center;
+        position: fixed;
+        left: 55vw;
+        top: 40vh;
+    }
+    .item5 {
+        grid-area: blank2;
+        width: 20vw;
+    }
+    /* #endregion body bigscreen*/
     
+
+    /* #region footer bigscreen*/
     .footer {
         position: fixed;
         left: 0;
@@ -193,5 +246,11 @@ body {
         margin-top: 3px;
         margin-bottom: 3px;
       }
-
+    /* #endregion footer bigscreen*/
 }
+@media only screen and (min-width: 1100) {
+    .item3 {
+        font-size: 125%;
+    }
+}
+    
