--- a/styles/Experience_style.css
+++ b/styles/Experience_style.css
@@ -12,6 +12,7 @@
     border: 1px solid #17395aa0 ;
     width: auto;
     position: fixed;
+    z-index: 1500;
     top: 0;
     left: 0;
     width: fit-content;
@@ -21,7 +22,7 @@
 #topNavbar a {
     float: left;
     color: #78fbcf;
-    padding: 6px 10px;
+    padding: 8px 20px;
     border: 2px solid #083157;
     text-align: center;
     text-decoration: none;
@@ -39,62 +40,155 @@
 /* #endregion comment 2*/
 
 /* #region Body*/
-body {
-    background-color: #0f253f;
-}
+
+    /* #region bodyelements */
+    body {
+        background-color: #0f253f;
+        margin-top: 40px;
+    }
+    
     h1 {
         text-align: center;
         color: #00ffff;
-        font-size: 300%;
+        font-size: 400%;
     }
+    .header {
+        margin-top: 60px;
+    }
+    h2 {
+        text-align: center;
+        color: #00ccff;
+        font-size: 250%;
+    }
+    h3 {
+        text-align: center;
+        color: #00aaff;
+        font-size: 200%;
+        margin: 20px 20px 0px 20px;
+    }
+
     p {
         text-align: center;
         color: #00cccc;
         font-size: 125%;
-
     }
-    #aboutMeGrid {
-        margin-top: 10px;
+    img {
+        margin-top: 20px;
+        border: solid 4px #007777;
+        border-radius: 5px;
+    }
+    /* #endregion bodyelements */
+
+    /* #region griddy */
+    #TexperienceGrid {
+        margin-top: -40px;
+        grid-template-areas: 
+        'header1'
+        'paragraph1'
+        'image1'
+        'header2'
+        'image2'
+        'paragraph2';
     }
     .griddy {
         display: grid;
-        grid-template-areas: 
-        'header header header header'
-        'blank1 paragraph1 image blank2';
         gap: 5px;
         padding: 5px;
     }
 
     .item1 {
-        grid-area: header;
-        font-size: 125%;
+        grid-area: header1;
     }
     .item2 {
-        /* comment */
-        grid-area: blank1;
-        width: 5vw;
+        grid-area: paragraph1;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 7.5vw;
+        font-size: 100%;
     }
     .item3 {
-        grid-area: paragraph1;
-        width: 50vw;
+        grid-area: image1;
+        width: 80vw;
         text-align: center;
-        position: fixed;
-        left: 5vw;
-        top: 20vh;
-        font-size: 85%;
+        position: relative;
+        left: 7.5vw;
+        border-radius: 30px;
     }
     .item4 {
-        grid-area: image;
-        width: 50vw;
+        grid-area: header2;
+    }
+    .item6 {
+        grid-area: image2;
+        width: 80vw;
         text-align: center;
-        position: fixed;
-        left: 55vw;
-        top: 25vh;
+        position: relative;
+        left: 7.5vw;
+        border-radius: 30px;
     }
     .item5 {
-        grid-area: blank2;
-        width: 5vw;
+        grid-area: paragraph2;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 7.5vw;
+        font-size: 100%;
     }
+
+    #SkillsGrid {
+        margin-top: -40px;
+        grid-template-areas: 
+        'header1'
+        'paragraph1'
+        'image1'
+        'header2'
+        'image2'
+        'paragraph2';
+    }
+    .item7 {
+        grid-area: header1;
+    }
+    .item8 {
+        grid-area: paragraph1;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 7.5vw;
+        font-size: 100%;
+    }
+    .item9 {
+        grid-area: image1;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 5vw;
+        border-radius: 30px;
+    }
+    .imageMath {
+        width: 80vw;
+        height: auto;
+    }
+    .item10 {
+        grid-area: header2;
+    }
+    .item11 {
+        grid-area: image2;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 7.5vw;
+        border-radius: 30px;
+    }
+    .item12 {
+        grid-area: paragraph2;
+        width: 80vw;
+        text-align: center;
+        position: relative;
+        left: 7.5vw;
+        font-size: 100%;
+    }
+    /* #endregion Griddy*/
+
 /* #endregion Body*/
 
 /* #region Footer*/
@@ -146,11 +240,18 @@ body {
     background-color: #e92c2c;
     color: white;
   }
+  .fa-phone {
+    background-color: #83ee00;
+    color: white;
+  }
+  .spacing {
+    margin-bottom: 40px;
+  }
 /* #endregion Footer*/
 
 @media only screen and (min-width: 800px) {
     
-    /* #region navbar bigscreen*/
+/* #region navbar bigscreen*/
     #topNavbar {
         display: inline-block;
         background-color: #1e4f7e;
@@ -172,10 +273,11 @@ body {
         margin: 3px;
         border-radius: 8px;
     }
-    /* #endregion navbar bigscreen*/
+/* #endregion navbar bigscreen*/
 
 
-    /* #region body bigscreen*/
+/* #region body bigscreen*/
+
     body {
         background-size: 100vw 85vh;
         background-position-x: center;
@@ -183,52 +285,104 @@ body {
         background-repeat: no-repeat;
     }
     
-    #aboutMeGrid {
-        margin-top: 80px;
+    /* #region griddy bigscreen */
+    #TexperienceGrid {
+        grid-template-areas: 
+        'header1 header1'
+        'paragraph1 image1'
+        'header2 header2'
+        'image2 paragraph2';
     }
     .griddy {
         display: grid;
-        grid-template-areas: 
-        'header header header header'
-        'blank1 paragraph1 image blank2';
         gap: 5px;
         padding: 5px;
     }
 
     .item1 {
-        grid-area: header;
+        grid-area: header1;
     }
     .item2 {
-        /* comment */
-        grid-area: blank1;
-        width: 20vw;
+        grid-area: paragraph1;
+        width: 50vw;
+        text-align: center;
+        position: relative;
+        left: 5vw;
+        font-size: 100%;
     }
     .item3 {
+        grid-area: image1;
+        width: 30vw;
+        text-align: center;
+        position: relative;
+        left: 0vw;
+        border-radius: 30px;
+    }
+    .item4 {
+        grid-area: header2;
+    }
+    .item5 {
+        grid-area: image2;
+        width: 40vw;
+        text-align: center;
+        position: relative;
+        left: 5vw;
+        border-radius: 30px;
+    }
+    .item6 {
+        grid-area: paragraph2;
+        width: 40vw;
+        text-align: center;
+        position: relative;
+        left: 0vw;
+        font-size: 100%;
+    }
+
+    #SkillsGrid {
+        grid-template-areas: 
+        'header1 header1'
+        'paragraph1 image1'
+        'header2 header2'
+        'image2 paragraph2';
+
+    }
+    .item7 {
+        grid-area: header1;
+    }
+    .item8 {
         grid-area: paragraph1;
         width: 40vw;
         text-align: center;
-        position: fixed;
-        left: 20vw;
-        top: 35vh;
+        position: relative;
+        left: 5vw;
         font-size: 100%;
     }
-    .item4 {
-        grid-area: image;
+    .item9 {
+        grid-area: image1;
         width: 40vw;
         text-align: center;
-        position: fixed;
-        left: 55vw;
-        top: 40vh;
-        border-radius: 30px;
+        position: relative;
+        left: 5vw;
     }
-    .item5 {
-        grid-area: blank2;
-        width: 20vw;
+    .imageMath {
+        width: 30vw;
+        height: auto;
     }
-    /* #endregion body bigscreen*/
+    .item10 {
+        grid-area: header2;
+    }
+    .item11 {
+        grid-area: image2;
+    }
+    .item12 {
+        grid-area: paragraph2;
+    }
+    /* #endregion griddy bigscreen */
+
+/* #endregion body bigscreen*/
     
 
-    /* #region footer bigscreen*/
+/* #region footer bigscreen*/
     .footer {
         position: fixed;
         left: 0;
@@ -250,10 +404,23 @@ body {
         margin-top: 3px;
         margin-bottom: 3px;
       }
-    /* #endregion footer bigscreen*/
+/* #endregion footer bigscreen*/
 }
 @media only screen and (min-width: 1100) {
     .item3 {
         font-size: 125%;
+    }
+}
+
+@media only screen and (max-width: 374px) {
+    #topNavbar a {
+        float: left;
+        color: #78fbcf;
+        padding: 6px 10px;
+        border: 2px solid #083157;
+        text-align: center;
+        text-decoration: none;
+        margin: 3px;
+        border-radius: 8px;
     }
 }
